Checkbox control and text should be aligned vertically (https://github.com/FrontEnd-ro/frontend.ro/issues/425)

--- a/client/components/Form/Checkbox/Checkbox.module.scss
+++ b/client/components/Form/Checkbox/Checkbox.module.scss
@@ -7,6 +7,7 @@
 .checkbox {
   color: color(green);
   display: inline-block;
+  vertical-align: middle;
 
   input {
     opacity: 0;
